--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,16 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="Texto1">
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:padding">15dp</item>
+    </style>
+
+    <style name="Boton">
+        <item name="android:layout_height">75dp</item>
+        <item name="android:layout_width">75dp</item>
+        <item name="android:layout_margin">10dp</item>
+    </style>
+
 </resources>
