--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,7 +50,9 @@
             android:layout_height="wrap_content"
             android:text="Info"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:onClick="bInfo"
+            android:id="@+id/buttonInfo"/>
 
         <ImageView
             android:layout_width="wrap_content"
