Acción para pasar activities de activity_main.xml a activity_aboutus.xml Cambios en el Java de MainActivity para añadir método y función de cambiar entre actividades.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,9 @@
             android:text="About us"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"/>
+            android:layout_marginBottom="20dp"
+            android:onClick="bInfo"
+            android:id="@+id/buttonInfo"/>
 
     </RelativeLayout>
 </LinearLayout>
