--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,9 @@
     android:orientation="vertical"
     tools:context="es.alcazardesanjuan.milnoseequivocan.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="0">
-
         <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="25dp"
             android:src="@mipmap/ic_account_circle_black_48dp"
             android:layout_gravity="center" />
@@ -40,31 +34,24 @@
             android:hint="@string/N2"/>
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonIniciar"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="60dp"
-            android:text="Iniciar"
+            android:background="@drawable/shape2"
             android:onClick="bIniciar"
-            android:id="@+id/buttonIniciar"
-            android:background="@drawable/shape2"/>
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1">
+            android:text="Iniciar" />
 
         <Button
-            android:layout_width="wrap_content"
+            android:id="@+id/buttonInfo"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Sobre nosotros"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
+            android:background="@drawable/shape2"
             android:onClick="bInfo"
-            android:id="@+id/buttonInfo"
-            android:background="@drawable/shape2"/>
+            android:text="Sobre nosotros" />
 
-    </RelativeLayout>
 </LinearLayout>
