--- a/app/src/main/res/layout/activity_wine_selection.xml
+++ b/app/src/main/res/layout/activity_wine_selection.xml
@@ -8,86 +8,123 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="35dp"
         android:text="@string/Vino"
         style="@style/Texto1"
         android:id="@+id/TextView1"/>
 
-    <ImageView
-        android:layout_width="80dp"
-        android:layout_height="100dp"
+    <ImageButton
         android:id="@+id/Corcho1"
-        android:src="@mipmap/corcho1xhdpi"
+        android:layout_width="60dp"
+        android:layout_height="100dp"
         android:layout_below="@id/TextView1"
         android:layout_marginLeft="60dp"
-        android:scaleType="fitCenter"/>
+        android:src="@drawable/estado_corcho_1"
+        android:scaleType="fitCenter"
+        android:background="#0000"
+        android:checked="false" />
 
-    <ImageView
-        android:layout_width="80dp"
+    <ImageButton
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:id="@+id/Corcho2"
-        android:src="@mipmap/corcho2xhdpi"
+        android:src="@drawable/estado_corcho_2"
+        android:background="#0000"
         android:layout_below="@id/TextView1"
-        android:layout_centerHorizontal="true"/>
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitCenter"
+        android:checked="false" />
 
-    <ImageView
-        android:layout_width="80dp"
+    <ImageButton
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:id="@+id/Corcho3"
-        android:src="@mipmap/corcho3xhdpi"
+        android:src="@drawable/estado_corcho_3"
+        android:background="#0000"
+        android:scaleType="fitCenter"
         android:layout_below="@id/TextView1"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="60dp"/>
+        android:layout_marginRight="60dp" />
 
-    <ImageView
-        android:layout_width="80dp"
+    <ImageButton
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:id="@+id/Corcho4"
-        android:src="@mipmap/corcho4xmdpi"
+        android:src="@drawable/estado_corcho_4"
+        android:scaleType="fitCenter"
+        android:background="#0000"
         android:layout_below="@+id/Corcho1"
         android:layout_marginLeft="60dp"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/Corcho5"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho2"
-        android:src="@mipmap/corcho5xhdpi"
+        android:src="@drawable/estado_corcho_5"
+        android:scaleType="fitCenter"
+        android:background="#0000"
         android:layout_centerHorizontal="true"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/Corcho6"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho3"
-        android:src="@mipmap/corcho6xhdpi"
+        android:src="@drawable/estado_corcho_6"
+        android:background="#0000"
+        android:scaleType="fitCenter"
         android:layout_alignParentRight="true"
         android:layout_marginRight="60dp"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/Corcho7"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho4"
-        android:src="@mipmap/corcho7xhdpi"
+        android:src="@drawable/estado_corcho_7"
+        android:background="#0000"
+        android:scaleType="fitCenter"
         android:layout_marginLeft="60dp"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/Corcho8"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho5"
-        android:src="@mipmap/corcho8xhdpi"
+        android:src="@drawable/estado_corcho_8"
+        android:background="#0000"
+        android:scaleType="fitCenter"
         android:layout_centerHorizontal="true"/>
 
-    <ImageView
+    <ImageButton
         android:id="@+id/Corcho9"
-        android:layout_width="80dp"
+        android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho6"
-        android:src="@mipmap/corcho9xhdpi"
+        android:src="@drawable/estado_corcho_9"
+        android:background="#0000"
+        android:scaleType="fitCenter"
         android:layout_alignParentRight="true"
         android:layout_marginRight="60dp"/>
+
+    <ImageButton
+        android:id="@+id/Corcho10"
+        android:layout_width="60dp"
+        android:layout_height="100dp"
+        android:layout_below="@id/Corcho7"
+        android:layout_marginLeft="60dp"
+        android:background="#0000"
+        android:src="@drawable/estado_corcho_10"
+        android:scaleType="fitCenter"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirmar"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="60dp"
+        android:layout_marginRight="65dp"
+        android:background="@drawable/shape2"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
