--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     tools:context="es.alcazardesanjuan.milnoseequivocan.MainActivity">
 
         <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
             android:layout_marginTop="25dp"
-            android:src="@mipmap/ic_account_circle_black_48dp"
+            android:src="@drawable/iniciosesioncopa"
             android:layout_gravity="center" />
 
         <TextView
@@ -35,21 +35,20 @@
 
         <Button
             android:id="@+id/buttonIniciar"
-            android:layout_width="120dp"
+            android:layout_width="110dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/shape2"
             android:onClick="bIniciar"
             android:text="Iniciar" />
 
         <Button
             android:id="@+id/buttonInfo"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
+            android:layout_marginTop="100dp"
+            android:layout_gravity="center"
             android:background="@drawable/shape2"
             android:onClick="bInfo"
             android:text="Sobre nosotros" />
