--- a/app/src/main/res/layout/activity_splash_wine.xml
+++ b/app/src/main/res/layout/activity_splash_wine.xml
@@ -7,7 +7,34 @@ android:paddingBottom="16dp"
 android:paddingLeft="16dp"
 android:paddingRight="16dp"
 android:paddingTop="16dp"
-android:background="#111FFF"
+android:background="@color/colorPrimaryDark"
 tools:context="es.alcazardesanjuan.milnoseequivocan.SplashWine">
+
+
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="29dp"
+        android:layout_marginRight="25dp"
+        android:layout_marginLeft="25dp"
+        android:id="@+id/cargandoView"
+
+         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="106dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="#FFF"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="¡ BIENVENIDOS A LA CATA !" />
 
 </RelativeLayout>
