Soy Manuel subo el splashscreen terminado casi finalizado

--- a/app/src/main/res/layout/activity_splash_wine.xml
+++ b/app/src/main/res/layout/activity_splash_wine.xml
@@ -25,16 +25,16 @@ tools:context="es.alcazardesanjuan.milnoseequivocan.SplashWine">
          />
 
     <TextView
+        style="@style/Text_splash"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="106dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:textColor="#FFF"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:text="¡ BIENVENIDOS A LA CATA !" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+
+        android:text="@string/bienvenido"
+        />
 
 </RelativeLayout>
