--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,13 @@
         <item name="android:fontFamily">cursive</item>
         <item name="android:textStyle">bold</item>
     </style>
+    <style name="Text_splash">
+        <item name="android:textSize">30sp</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:textAlignment">center</item>
+        <item name="android:fontFamily">cursive</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 
     <style name="Text_aboutus_content">
     <item name="android:textSize">20sp</item>
