--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             style="@style/Texto1"/>
 
         <EditText
+            android:id="@+id/username"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
