--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,10 @@
     tools:context="es.alcazardesanjuan.milnoseequivocan.MainActivity">
 
         <ImageView
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:layout_marginTop="25dp"
-            android:src="@drawable/iniciosesioncopa"
+            android:src="@mipmap/ic_account_circle_black_48dp"
             android:layout_gravity="center" />
 
         <TextView
@@ -25,30 +25,38 @@
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:hint="@string/N1"/>
+            android:hint="@string/N1"
+            android:id="@+id/username"
+            android:ems="10">
+        <requestFocus />
+        </EditText>
 
         <EditText
+            android:id="@+id/password"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_gravity="center"
-            android:hint="@string/N2"/>
+            android:hint="@string/N2"
+            android:ems="10"
+            android:inputType="textPassword" />
+
 
         <Button
-            android:id="@+id/buttonIniciar"
-            android:layout_width="110dp"
+            android:id="@+id/login"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="60dp"
             android:background="@drawable/shape2"
-            android:onClick="bIniciar"
             android:text="Iniciar" />
 
         <Button
             android:id="@+id/buttonInfo"
-            android:layout_width="150dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:layout_gravity="center"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/shape2"
             android:onClick="bInfo"
             android:text="Sobre nosotros" />
