--- a/app/src/main/res/layout/activity_valoracion_vino1.xml
+++ b/app/src/main/res/layout/activity_valoracion_vino1.xml
@@ -33,5 +33,19 @@
 
 
     </LinearLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:background="@drawable/shape2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Leyenda"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="5dp"
+            android:onClick="bLeyenda"
+            android:id="@+id/bPop"/>
+    </RelativeLayout>
 
 </LinearLayout>
