Añadido botón leyenda en activity_valoracion_vino1.xml Leyenda XML Clase java PopLeyenda Modificaciones al java de valoracionVino1.java añadida nueva activity al manifest
/////

Añadidas imágenes para la leyenda en drawable
Añadida clase java PopVista
Modificado botón prueba en Main Activity
Modificado el background de las Layout de leyendas

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,12 @@
             android:layout_marginTop="60dp"
             android:background="@drawable/shape2"
             android:text="Iniciar" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="prueba valoracion vinos"
+        android:id="@+id/bpruebavinos"
+        android:onClick="pruebavinos"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
