--- a/app/src/main/res/layout/activity_valoracion_vino1.xml
+++ b/app/src/main/res/layout/activity_valoracion_vino1.xml
@@ -19,7 +19,8 @@
             android:layout_height="75dp"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/vista">
+            android:background="@drawable/vista"
+            android:id="@+id/image_vista">
 
         </ImageView>
 
