--- a/app/src/main/res/layout/activity_wine_selection.xml
+++ b/app/src/main/res/layout/activity_wine_selection.xml
@@ -3,8 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:background="@color/colorPrimaryDark"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/eti_nombreA"
+                android:textSize="25dp"
+                android:layout_alignParentRight="true"/>
+        </RelativeLayout>
+    </android.support.v7.widget.Toolbar>
     <TextView
+        android:layout_below="@+id/toolbar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -14,6 +31,7 @@
 
     <ImageButton
         android:id="@+id/Corcho1"
+        android:onClick="bInfor"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@id/TextView1"
