- Activity main:      * Cambio en los hints de los edit text      * Cambio en los botones:           - Añadidos los diseños de Javi           - Cambio en la ubicación de los mismos
- Selección de vino:
     *Todos los corchos ahora cambian de estado a 'seleccionado' cuando son pulsados y envían a la sieguiente activity (activity_valoracion_vino1.xml)

- Valoración de vino:
     *Añadidos los diseños nuevos a los botones

- Cambio en el nombre de la aplicación tanto en la action bar como en el icono

--- a/app/src/main/res/drawable/estado_corcho_1.xml
+++ b/app/src/main/res/drawable/estado_corcho_1.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true"
-        android:drawable="@drawable/corchochecked1xhdpi" /> <!-- pressed -->
-    <item android:state_focused="true"
-        android:drawable="@drawable/corcho1xhdpi" /> <!-- focused -->
-    <item android:drawable="@drawable/corcho1xhdpi" /> <!-- default -->
+        <item android:drawable="@drawable/corchochecked1xhdpi"
+            android:state_pressed="true" />
+        <item android:drawable="@drawable/corchochecked1xhdpi"
+            android:state_focused="true" />
+        <item android:drawable="@drawable/corcho1xhdpi" />
+
 </selector>
