--- a/app/src/main/res/layout/activity_wine_selection.xml
+++ b/app/src/main/res/layout/activity_wine_selection.xml
@@ -45,6 +45,7 @@
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:id="@+id/Corcho2"
+        android:onClick="bInfor2"
         android:src="@drawable/estado_corcho_2"
         android:background="#0000"
         android:layout_below="@id/TextView1"
@@ -55,6 +56,7 @@
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="100dp"
+        android:onClick="bInfor3"
         android:id="@+id/Corcho3"
         android:src="@drawable/estado_corcho_3"
         android:background="#0000"
@@ -66,6 +68,7 @@
     <ImageButton
         android:layout_width="60dp"
         android:layout_height="100dp"
+        android:onClick="bInfor4"
         android:id="@+id/Corcho4"
         android:src="@drawable/estado_corcho_4"
         android:scaleType="fitCenter"
@@ -75,6 +78,7 @@
 
     <ImageButton
         android:id="@+id/Corcho5"
+        android:onClick="bInfor5"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho2"
@@ -85,6 +89,7 @@
 
     <ImageButton
         android:id="@+id/Corcho6"
+        android:onClick="bInfor6"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho3"
@@ -96,6 +101,7 @@
 
     <ImageButton
         android:id="@+id/Corcho7"
+        android:onClick="bInfor7"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho4"
@@ -106,6 +112,7 @@
 
     <ImageButton
         android:id="@+id/Corcho8"
+        android:onClick="bInfor8"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho5"
@@ -116,6 +123,7 @@
 
     <ImageButton
         android:id="@+id/Corcho9"
+        android:onClick="bInfor9"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@+id/Corcho6"
@@ -127,22 +135,12 @@
 
     <ImageButton
         android:id="@+id/Corcho10"
+        android:onClick="bInfor10"
         android:layout_width="60dp"
         android:layout_height="100dp"
         android:layout_below="@id/Corcho7"
-        android:layout_marginLeft="60dp"
+        android:layout_centerHorizontal="true"
         android:background="#0000"
-        android:src="@drawable/estado_corcho_10"
+        android:src="@drawable/corcho10xhdpi"
         android:scaleType="fitCenter"/>
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Confirmar"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="60dp"
-        android:layout_marginRight="65dp"
-        android:background="@drawable/shape2"
-        android:layout_alignParentRight="true" />
-
 </RelativeLayout>
