--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context="es.alcazardesanjuan.milnoseequivocan.MainActivity">
 
@@ -47,12 +47,11 @@
 
         <Button
             android:id="@+id/login"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
+            android:layout_width="101dp"
+            android:layout_height="64dp"
             android:layout_gravity="center"
-            android:layout_marginTop="60dp"
-            android:background="@drawable/shape2"
-            android:text="Iniciar" />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/iniciarxxxhdpi" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -60,14 +59,12 @@
 
         <Button
             android:id="@+id/buttonInfo"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
+            android:layout_width="101dp"
+            android:layout_height="64dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/shape2"
-            android:onClick="bInfo"
-            android:text="Sobre nosotros" />
+            android:background="@drawable/botoncreadoresxxxhdpi"
+            android:onClick="bInfo" />
     </RelativeLayout>
 
 </LinearLayout>
